apps/base/sc_data/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scdata
  name: scdata-service
  namespace: scdata
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: scdata
  type: ClusterIP
